# Entryphone

./: .gitignore  CMakeLists.txt  FindWiringPi.cmake  FindZMQ.cmake  README.md
ClientPython/: zmqClient.py  zmqSetSpeed.py
apartment/: Makefile  standard.mk
apartment/src/: Algorithm.cpp  Algorithm.hpp  apartment_main.cpp
apartment/src/client/: ApartmentClient.cpp  ApartmentClient.hpp
apartment/src/interface/: ApartmentServerDefinitions.cpp  ApartmentServerDefinitions.hpp
apartment/src/server/: ApartmentServer.cpp  ApartmentServer.hpp
common/: CommonTypes.h  TimeUtils.hpp  bimap.hpp  cpp_readline.mk  debug.hpp  single_thread.hpp  zmq.mk
common/json/: Json.hpp  ToJson.cpp  ToJson.hpp  example.cpp  example.cpp.test
common/zmq_layer/: Publisher.cpp  Publisher.hpp  Replier.cpp  Replier.hpp  Requester.cpp  Requester.hpp  Subscriber.cpp  Subscriber.hpp  zhelpers.hpp
entrance/src/: Algorithm.cpp  Algorithm.hpp  ConsoleInterface.cpp  ConsoleInterface.hpp  entrance_main.cpp
entrance/src/HwMgr/: HardwareManager.cpp  HardwareManager.h
entrance/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
entrance/src/server/: EntranceServer.cpp  EntranceServer.hpp
entrata/: videocit_entrance
entrata/src/: Algorithm.cpp  Algorithm.hpp  ConsoleInterface.hpp
entrata/src/interface/: EntranceServerDefinitions.cpp  EntranceServerDefinitions.hpp
entrata/src/server/: EntranceServer.hpp
entry/: Makefile
entry/src/: Algorithm.hpp
entry/src/interface/: EntranceServerDefinitions.hpp
entry/src/server/: EntranceServer.cpp  EntranceServer.hpp
videoStreamer/: Makefile  standard.mk
videoStreamer/src/: Algorithm.cpp  Algorithm.hpp  main.cpp
videoStreamer/src/cli/: Makefile  standard.mk
videoStreamer/src/cli/src/: main.cpp
